# monocular-slam-drone

./: .env  .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml
_archive/: airsim_module.py
_archive/airsim-archive/airsim-node/scripts/: DDataFeed.py  camera_publisher.py
_archive/airsim-archive/airsim-node/scripts/utils/: d-model.py  d2-model.py  drone_save_camera_feed.py  drone_warm_up.py  test.py
_archive/navigator-node/: Dockerfile
_archive/navigator-node/navigator_package/: package.xml
_archive/navigator-node/navigator_package/src/: navigator_node.cpp
_archive/octo-map-node/: Dockerfile
_archive/orb-slam3-node/: Dockerfile
_archive/orb-slam3-node/ros-wrapper/: CMakeLists.txt  package.xml
_archive/orb-slam3-node/ros-wrapper/config/: EuRoC.yaml
_archive/orb-slam3-node/ros-wrapper/config/backup/: EuRoC.yaml
_archive/orb-slam3-node/ros-wrapper/include/: common.h
_archive/orb-slam3-node/ros-wrapper/launch/: euroc_mono.launch
airsim-node/: Dockerfile  camera_calibration.md  setup
airsim-node/airsim_package/: CMakeLists.txt  package.xml
airsim-node/airsim_package/launch/: airsim_IMU.launch  airsim_camera.launch  airsim_camera_xyz.launch  airsim_navigator.launch  airsim_point_cloud.launch  airsim_point_cloudV2.launch
airsim-node/airsim_package/msg/: Pcd2WithPose.msg
airsim-node/airsim_package/rviz/: airsim_point_cloud.rviz
airsim-node/airsim_package/src/: airsim_IMU.py  airsim_camera.py  airsim_camera_xyz.py  airsim_navigator.py  airsim_point_cloud.py  airsim_point_cloudV2.py
airsim-node/config/: settings.json
airsim-node/scripts/: DControl.py  DDFM.py  e1.py  e2.py  save_camera_feed.py
airsim-node/scripts/utils/: camera_calibration.py  save_camera_feed.py  warm_up.py
airsim-node/utils/: depth-model-nh.py  drone_control.py  drone_depth_calibrator.py  drone_save_camera_feed.py
archive/: docker-compose.yml
archive/airsim-archive/airsim-node/: Dockerfile
archive/airsim-archive/airsim-node/config/: settings.json
archive/airsim-archive/airsim-node/scripts/: DCM.py  DDFM.py  imu_publisher.py
archive/octo-map-node/launch/: octomap_mapping.launch
archive/orb-slam3-node/ros-wrapper/: CMakeLists.txt
archive/orb-slam3-node/ros-wrapper/launch/: euroc_monoimu.launch
depth-estimation-node/: Dockerfile  setup
depth-estimation-node/depth_estimation_package/: CMakeLists.txt  package.xml
depth-estimation-node/depth_estimation_package/launch/: depth_estimation.launch  depth_estimationV2.launch
depth-estimation-node/depth_estimation_package/msg/: DepthWithPose.msg  RGBWithPose.msg
depth-estimation-node/depth_estimation_package/src/: estimator.py  estimatorV2.py
depth-estimation-node/depth_estimation_package/src/modules/: depth_anything_module.py  midas_module.py
mapper-nav-node/: Dockerfile  setup
mapper-nav-node/nav/: CMakeLists.txt  mapper.py  maze.py  package.xml  ros_node.py  utils.py
mapper-nav-node/nav/launch/: mapper_nav.launch
mapper-nav-node/nav/rviz/: visual.rviz
mapper-nav-node/nav/scripts/: a_star.py  archive.py  data_logger.py  drrt.py  estimator.py  experiments.sh  mapper.py  mapper_nav_ros.py  mapper_nav_unified.py  maze.py  maze_ros.py  nav_config.py  test_ros.py  utils.py
mapper-nav-node/nav/scripts/modules/: depth_anything_module.py  midas_module.py
master-node/: Dockerfile
monocular-drone/: Dockerfile  setup.md
monocular-drone/drone-node/: CMakeLists.txt
monocular-drone/drone-node/src/: a_star.py  depth.py  depthV2.py  depth_train.py  depth_train_v2.py  depth_train_v2_base.py  depth_train_v2_large.py  depth_train_v2_test.py  drrt.py  mapper.py  mapper_nav_ros.py  monodepth.py  nav_config.py  utils.py
nav/: a_star.py  mapper.py  maze.py  utils.py
navigator-node/: Dockerfile
navigator-node/navigator_package/: CMakeLists.txt
navigator-node/navigator_package/launch/: navigator.launch
navigator-node/navigator_package/src/: navigator_node.cpp
octo-map-node/: Dockerfile
octo-map-node/launch/: octomap_mapping.launch
octo-map-node/rviz/: visual.rviz
orb-slam3-node/: Dockerfile  setup
orb-slam3-node/ros-wrapper/: package.xml
orb-slam3-node/ros-wrapper/config/: EuRoC.yaml
orb-slam3-node/ros-wrapper/launch/: euroc_mono.launch  euroc_monoimu.launch
orb-slam3-node/ros-wrapper/src/: common.cc  mono_inertial_node.cc  mono_node.cc
testing-node/: Dockerfile
testing-node/scripts/: mono-image-stream.py
