<?xml version="1.0"?>
<package format="2">
  <name>navigator_package</name>
  <version>0.0.1</version>
  <description>The navigator package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Build dependencies -->
  <build_depend>octomap</build_depend>

  <!-- Export information -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
